@@ -1,5 +1,6 @@
 package com.rolliedev.model;
 
+import com.rolliedev.exceptions.EdgeDoesNotExistException;
 import com.rolliedev.util.GraphUtils;
 
 import java.util.ArrayList;
@@ -33,9 +34,21 @@ public class Graph {
         for (int i = 0; i < V - 1; i++) {
             for (int j = i + 1; j < V; j++) {
                 if (matrix[i][j] != 0) {
-                    // TODO: 2/22/2023 don't forget about this moment. Do we really need to add one edge twice?
                     edges.add(new Edge(i, j, matrix[i][j]));
                     edges.add(new Edge(j, i, matrix[i][j]));
+                }
+            }
+        }
+        return new Graph(V, edges);
+    }
+
+    public static Graph getDirectedGraphFromAdjMatrix(int[][] matrix) {
+        int V = matrix.length;
+        List<Edge> edges = new ArrayList<>();
+        for (int i = 0; i < V; i++) {
+            for (int j = 0; j < V; j++) {
+                if (matrix[i][j] != 0) {
+                    edges.add(new Edge(i, j, matrix[i][j]));
                 }
             }
         }
@@ -53,7 +66,7 @@ public class Graph {
                 .filter(edge -> edge.srcVIdx == vertex.idx)
                 .flatMap(edge -> {
                     List<Vertex> vertexList = new ArrayList<>();
-                    for (int i = 0; i < edge.getRepeat(); i++) {
+                    for (int i = 0; i < edge.getFrequency(); i++) {
                         vertexList.add(vertices.get(edge.destVIdx));
                     }
                     return vertexList.stream();
@@ -65,8 +78,30 @@ public class Graph {
         return vertices.get(idx);
     }
 
-    public void addEdge(int srcVIdx, int destVIdx, int weight) {
-        edges.add(new Edge(srcVIdx, destVIdx, weight));
+    /**
+     * Invoke this method only if it is an undirected graph
+     */
+    public void addEdge(int VIdx, int UIdx, int weight) {
+        edges.add(new Edge(VIdx, UIdx, weight));
+        edges.add(new Edge(UIdx, VIdx, weight));
+    }
+
+//    public void addEdge(int VIdx, int UIdx, int weight) {
+//        edges.add(new Edge(VIdx, UIdx, weight));
+//    }
+
+    public void removeEdge(int VIdx, int UIdx) {
+        edges.removeIf(edge -> edge.equals(new Edge(VIdx, UIdx, 0)));
+    }
+
+    public Vertex addVertex() {
+        var vertex = new Vertex(vertices.size());
+        vertices.add(vertex);
+        return vertex;
+    }
+
+    public void removeVertex(int idxOfVertex) {
+        vertices.remove(idxOfVertex);
     }
 
     /**
@@ -83,7 +118,8 @@ public class Graph {
                 return edge;
             }
         }
-        return null;
+        throw new EdgeDoesNotExistException(
+                String.format("Between %d and %d does not exist an edge", srcV.idx, destV.idx));
     }
 
     public int getSumOfAllEdges() {
@@ -112,8 +148,6 @@ public class Graph {
         private int minDist;
         // previous vertex in the shortest path
         private Vertex prev;
-        // degree of vertex
-        private int degree;
 
         public Vertex(int idx) {
             this(idx, INFINITY);
@@ -122,10 +156,6 @@ public class Graph {
         private Vertex(int idx, int minDist) {
             this.idx = idx;
             this.minDist = minDist;
-        }
-
-        public void reduceDegree() {
-            this.degree -= 1;
         }
 
         @Override
@@ -177,14 +207,6 @@ public class Graph {
         public void setPrev(Vertex prev) {
             this.prev = prev;
         }
-
-        public int getDegree() {
-            return degree;
-        }
-
-        public void setDegree(int degree) {
-            this.degree = degree;
-        }
     }
 
     public static class Edge {
@@ -194,28 +216,31 @@ public class Graph {
         private int destVIdx;
         // it denotes the weight of edge
         private int weight;
-        // TODO: 3/7/2023 try to rename this variable for better understanding
-        private int repeat;
+        // by default, it sets to 1
+        private int frequency;
 
         public Edge(int srcVIdx, int destVIdx, int weight) {
             this.srcVIdx = srcVIdx;
             this.destVIdx = destVIdx;
             this.weight = weight;
-            this.repeat = 1;
+            this.frequency = 1;
         }
 
-        public void addRepeat() {
-            repeat = repeat + 1;
+        public void increaseFrequency() {
+            frequency = frequency + 1;
         }
 
-        public void subRepeat() {
-            repeat = repeat - 1;
+        public void reduceFrequency() {
+            frequency = frequency - 1;
         }
 
         @Override
         public String toString() {
-            return """
-                    %d--%d--%d (%d)""".formatted(srcVIdx, weight, destVIdx, repeat);
+            return String.format("(%d)--%d--(%d)", srcVIdx, weight, destVIdx);
+
+//            return """
+//                    (%d)--%d--(%d)""".formatted(srcVIdx, weight, destVIdx);
+
 //            return "Edge{" +
 //                    "srcVIdx=" + srcVIdx +
 //                    ", destVIdx=" + destVIdx +
@@ -265,12 +290,12 @@ public class Graph {
             this.weight = weight;
         }
 
-        public int getRepeat() {
-            return repeat;
+        public int getFrequency() {
+            return frequency;
         }
 
-        public void setRepeat(int repeat) {
-            this.repeat = repeat;
+        public void setFrequency(int frequency) {
+            this.frequency = frequency;
         }
     }
 
